BAP-3735: Open tooltip on mouse click, not on mouse over, and without animation - should work onclick and remove all animation    - fix scroll issue    - fix z-index issue    - added additional setting for application name/title

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
@@ -3442,6 +3442,11 @@ i.pin-status {
   font-size: 13px;
 }
 
+#container .popover {
+  // prevent menu and loading wrapper overlapping
+  z-index: 800;
+}
+
 label .popover-content {
   text-transform: none;
 }
